[project]
dynamic = ["version", "dependencies"]
name = "la-sh"
description = "Language Anatomy (L.A.) of the whole bash language, a profound investigation of each bash parts"
authors = [
    {name = "Jegx",email = "1914jegx@gmail.com"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.poetry]
package-mode = false

[tool.poetry.group.improve.dependencies]
pre-commit = "^4.2.0"
ruff = "^0.11.10"

[tool.poetry.group.docs.dependencies]
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
